--- a/okay-menu-example/OptionsMenuEx3/app/src/main/res/values/strings.xml
+++ b/okay-menu-example/OptionsMenuEx3/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Options Menu Ex</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Home</string>
+    <string name="menu_cancel">Cancel</string>
 </resources>
